--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div id="quiz" class="hide">
             <h2 id="question">question title goes here</h2>
             <div id="choices">buttons goes here</div>
+            <button id = "nextQ">next question</button>
         </div>
 
         <div id="final" class="hide">
